--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -159,6 +159,9 @@
    <setting name="QueueTitlesTitleOverride" serializeAs="String">
     <value>1</value>
    </setting>
+   <setting name="ShowAudioTrackNameField" serializeAs="String">
+    <value>False</value>
+   </setting>
   </VidCoder.Properties.Settings>
 	</userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup></configuration>
