Updating to Handbrake version 3935svn. Tweaked buffer values for audio and job structs to reflect padding. Fixed turbo first pass not applying.

--- a/HandBrakeInterop/HandBrakeInterop/HandBrakeInterop.csproj
+++ b/HandBrakeInterop/HandBrakeInterop/HandBrakeInterop.csproj
@@ -133,6 +133,7 @@
     <Compile Include="InteropUtilities.cs" />
     <Compile Include="Language.cs" />
     <Compile Include="LanguageCodes.cs" />
+    <Compile Include="MarshalingConstants.cs" />
     <Compile Include="MessageLoggedEventArgs.cs" />
     <Compile Include="Model\Cropping.cs" />
     <Compile Include="Model\EncodeJob.cs" />
