--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -23,7 +23,7 @@
 			<register type="IFileService" mapTo="FileService">
 				<lifetime type="singleton" />
 			</register>
-			<register type="IPresetImport" mapTo="PresetImport" />
+			<register type="IPresetImportExport" mapTo="PresetImportExport" />
 			<register type="IProcesses" mapTo="Processes">
 				<lifetime type="singleton" />
 			</register>
@@ -161,6 +161,9 @@
    </setting>
    <setting name="ShowAudioTrackNameField" serializeAs="String">
     <value>False</value>
+   </setting>
+   <setting name="LastPresetExportFolder" serializeAs="String">
+    <value />
    </setting>
   </VidCoder.Properties.Settings>
 	</userSettings>
