--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -7,6 +7,10 @@
 		</sectionGroup>
 	</configSections>
 
+  <startup useLegacyV2RuntimeActivationPolicy="true">
+    <supportedRuntime version="v4.0"/>
+  </startup>
+  
 	<unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
 		<namespace name="VidCoder.Services" />
 		<assembly name="VidCoder" />
