Added button to clear completed queue items, fixed bug with range specification.

--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -280,6 +280,7 @@
     <Compile Include="Utilities\ListSynchronizer\TwoListSynchronizer.cs" />
     <Compile Include="Utilities\RefireControl.cs" />
     <Compile Include="Utilities\SystemSleepManagement.cs" />
+    <Compile Include="Utilities\UIUtilities.cs" />
     <Compile Include="Utilities\Unity.cs" />
     <Compile Include="ViewModel\AboutDialogViewModel.cs" />
     <Compile Include="ViewModel\AddAutoPauseProcessDialogViewModel.cs" />
