Changed video bitrate calculation to use HandbrakeInterop rather than the core handbrake function, since hb_calc_bitrate is going away soon. Also added a function to predict file size and cleaned up control visibility for different video rate types.

--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -269,6 +269,8 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Converters\DoubleDisplayConverter.cs" />
+    <Compile Include="Converters\EnumVisibilityConverter.cs" />
+    <Compile Include="Converters\EnumVisibilityInverseConverter.cs" />
     <Compile Include="Converters\PercentDisplayConverter.cs" />
     <Compile Include="Converters\SampleRateDisplayConverter.cs" />
     <Compile Include="DataReaderExtensions.cs" />
