--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -137,6 +137,7 @@
     <Reference Include="System.Management" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -286,6 +287,7 @@
     <Compile Include="EnumStringConverter.cs" />
     <Compile Include="Model\Database.cs" />
     <Compile Include="Model\DatabaseConfig.cs" />
+    <Compile Include="Model\EncodeCompleteAction.cs" />
     <Compile Include="Model\EncodeJobCollection.cs" />
     <Compile Include="Model\EncodeResult.cs" />
     <Compile Include="Model\LogEntry.cs" />
@@ -298,9 +300,11 @@
     <Compile Include="Services\Interfaces\IPresetImportExport.cs" />
     <Compile Include="Services\Interfaces\IProcesses.cs" />
     <Compile Include="Services\Interfaces\IProcessAutoPause.cs" />
+    <Compile Include="Services\Interfaces\ISystemOperations.cs" />
     <Compile Include="Services\PresetImportExport.cs" />
     <Compile Include="Services\ProcessAutoPause.cs" />
     <Compile Include="Services\Processes.cs" />
+    <Compile Include="Services\SystemOperations.cs" />
     <Compile Include="Utilities\ListSynchronizer\IListItemConverter.cs" />
     <Compile Include="Services\Logger.cs" />
     <Compile Include="Utilities\ListSynchronizer\MultiSelectorBehaviors.cs" />
