--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -32,6 +32,7 @@
 				<lifetime type="singleton" />
 			</register>
 			<register type="IProcessAutoPause" mapTo="ProcessAutoPause" />
+      <register type="ISystemOperations" mapTo="SystemOperations" />
 		</container>
 	</unity>
 
