--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -170,6 +170,9 @@
    <setting name="LastPresetExportFolder" serializeAs="String">
     <value />
    </setting>
+   <setting name="SourceHistory" serializeAs="String">
+    <value />
+   </setting>
   </VidCoder.Properties.Settings>
 	</userSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup></configuration>
+</configuration>
