Updated to HandBrake svn 4167. Added support for AAC and MP3 passthrough, and DTS and DTS-HD passthrough for MP4. Added splash screen.
Updated version numbers.

--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -530,6 +530,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </Content>
+    <SplashScreen Include="splash.png" />
     <Resource Include="Icons\video-file.png" />
     <Resource Include="Icons\encode_160.png" />
     <Resource Include="Icons\bludisc.png" />
