Worked around splash screen dismissing the auto-update success dialog by using a proper window. Updated the auto-update XML.

--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -382,6 +382,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="View\UpdateSuccess.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
@@ -489,6 +493,9 @@
     </Compile>
     <Compile Include="View\Panels\VideoPanel.xaml.cs">
       <DependentUpon>VideoPanel.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\UpdateSuccess.xaml.cs">
+      <DependentUpon>UpdateSuccess.xaml</DependentUpon>
     </Compile>
     <Compile Include="WindowPlacement.cs" />
     <Compile Include="WindowPlacementWpf.cs" />
