Adding option to minimize VidCoder to the system tray rather than the task bar.

--- a/VidCoder/Properties/Settings.settings
+++ b/VidCoder/Properties/Settings.settings
@@ -128,5 +128,8 @@
     <Setting Name="SourceHistory" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="MinimizeToTray" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
