--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -33,6 +33,7 @@
 			</register>
 			<register type="IProcessAutoPause" mapTo="ProcessAutoPause" />
       <register type="ISystemOperations" mapTo="SystemOperations" />
+      <register type="TrayService" />
 		</container>
 	</unity>
 
@@ -160,6 +161,9 @@
    </setting>
    <setting name="SourceHistory" serializeAs="String">
     <value />
+   </setting>
+   <setting name="MinimizeToTray" serializeAs="String">
+    <value>False</value>
    </setting>
   </VidCoder.Properties.Settings>
 	</userSettings>
