--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -57,9 +57,6 @@
    <setting name="LastPresetIndex" serializeAs="String">
     <value>0</value>
    </setting>
-   <setting name="AutoNameOutputFiles" serializeAs="String">
-    <value>True</value>
-   </setting>
    <setting name="AutoNameOutputFolder" serializeAs="String">
     <value />
    </setting>
@@ -163,6 +160,9 @@
     <value />
    </setting>
    <setting name="MinimizeToTray" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="OutputToSourceDirectory" serializeAs="String">
     <value>False</value>
    </setting>
   </VidCoder.Properties.Settings>
