--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -165,6 +165,12 @@
    <setting name="OutputToSourceDirectory" serializeAs="String">
     <value>False</value>
    </setting>
+   <setting name="WhenFileExists" serializeAs="String">
+    <value>Prompt</value>
+   </setting>
+   <setting name="WhenFileExistsBatch" serializeAs="String">
+    <value>AutoRename</value>
+   </setting>
   </VidCoder.Properties.Settings>
 	</userSettings>
 </configuration>
