--- a/VidCoder/Properties/Settings.settings
+++ b/VidCoder/Properties/Settings.settings
@@ -131,5 +131,11 @@
     <Setting Name="OutputToSourceDirectory" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="WhenFileExists" Type="VidCoder.Model.WhenFileExists" Scope="User">
+      <Value Profile="(Default)">Prompt</Value>
+    </Setting>
+    <Setting Name="WhenFileExistsBatch" Type="VidCoder.Model.WhenFileExists" Scope="User">
+      <Value Profile="(Default)">AutoRename</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
