--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -144,6 +144,9 @@
    <setting name="WhenFileExistsBatch" serializeAs="String">
     <value>AutoRename</value>
    </setting>
+   <setting name="KeepScansAfterCompletion" serializeAs="String">
+    <value>True</value>
+   </setting>
   </VidCoder.Properties.Settings>
 	</userSettings>
 </configuration>
