Added status messages. Added messages for a few events (encode start/stop, playing a preview clip, update available, update download finished).

--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -313,6 +313,7 @@
     <Compile Include="Messages\ScanningChangedMessage.cs" />
     <Compile Include="Messages\SelectedTitleChangedMessage.cs" />
     <Compile Include="Messages\OptionsChangedMessage.cs" />
+    <Compile Include="Messages\StatusMessage.cs" />
     <Compile Include="Messages\VideoSourceChangedMessage.cs" />
     <Compile Include="Model\ComboChoice.cs" />
     <Compile Include="Model\Database.cs" />
