--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -147,6 +147,9 @@
    <setting name="KeepScansAfterCompletion" serializeAs="String">
     <value>True</value>
    </setting>
+   <setting name="PlaySoundOnCompletion" serializeAs="String">
+    <value>False</value>
+   </setting>
   </VidCoder.Properties.Settings>
 	</userSettings>
 </configuration>
